syntax = "proto3";

package ethereum;

option go_package = "github.com/al002/sylph/chains/ethereum/proto";

message LatestBlock {
  int64 block_number = 1;
  string hash = 2;
}

message Block {
  int64 block_number = 1;
  string hash = 2;
  string parent_hash = 3;
  int64 timestamp = 4;
  string state_root = 5;
  string transactions_root = 6;
  string receipts_root = 7;
  string miner = 8;
  int64 gas_used = 9;
  int64 gas_limit = 10;
  string base_fee_per_gas = 11;
  string difficulty = 12;
  string total_difficulty = 13;
}

message Transaction {
  string hash = 1;
  string from_address = 2;
  string to_address = 3;
  string value = 4;
  int64 gas = 5;
  string gas_price = 6;
  int64 nonce = 7;
  bytes input = 8;
  int32 transaction_type = 9;
  string max_fee_per_gas = 10;
  string max_priority_fee_per_gas = 11;
  bool status = 12;
  string transaction_category = 13;
  int64 gas_used = 14;
  string effective_gas_price = 15;
  string total_fee = 16;
  string contract_address = 17;
  string method_id = 18;
  string method_name = 19;
}

message Log {
  string address = 1;
  repeated string topics = 2;
  bytes data = 3;
  int32 index = 4;
  string transaction_hash = 5;
}

message TokenTransfer {
  string from_address = 1;
  string to_address = 2;
  string value = 3;
  string token_type = 4;
  string token_id = 5;
  string transaction_hash = 6;
}

message BlockData {
  Block block = 1;
  repeated Transaction transactions = 2;
  repeated Log logs = 3;
  repeated TokenTransfer token_transfers = 4;
}
